Stop btn-group inheriting from .row and overflow-x to be auto

--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -46,7 +46,6 @@
 }
 
 .btn-group{
-    @extend .row;
     @include nowrap;
     position: relative;
     display: block;
