--- a/scss/modules/_helper.scss
+++ b/scss/modules/_helper.scss
@@ -116,7 +116,7 @@
 
 .overflow-x-scroll{
     max-width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     position: relative;
     display: block;
 }
